overflow-fix

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body,
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 50px;
+  overflow-x: hidden;
 }
 
 body {
